# MatrixPermanent

./: CMakeLists.txt  README.md
src/: permanent.cpp  permanent.h  permanentRNW_mex.cpp  test_permanent.cpp
